--- a/src/index.html
+++ b/src/index.html
@@ -20,18 +20,15 @@
       </header>
       <main class="content">
         <section class="profile page__section">
-          <div
-            class="profile__image"
-            style="background-image: url('<%=require(`./images/avatar.jpg`)%>')"
-          ></div>
+          <div class="profile__image"></div>
           <div class="profile__info">
-            <h1 class="profile__title">Жак-Ив Кусто</h1>
+            <h1 class="profile__title"></h1>
             <button
               class="profile__edit-button"
               type="button"
               aria-label="Изменить профиль"
             ></button>
-            <p class="profile__description">Исследователь океана</p>
+            <p class="profile__description"></p>
           </div>
           <button
             class="profile__add-button"
@@ -77,7 +74,7 @@
               maxlength="200"
               id="popup__input_type_description"
               pattern="^[a-zA-Zа-яА-Яё_ \-]+$"
-              data-error-message="Разрешены только и кириллические буквы, знаки дефиса и пробелы."
+              data-error-message="Разрешены только латинские и кириллические буквы, знаки дефиса и пробелы."
               required
             />
             <span
@@ -140,6 +137,28 @@
         </div>
       </div>
     </div>
+    <div class="popup popup_type_avatar">
+      <div class="popup__content">
+        <button
+          type="button"
+          class="popup__close"
+          aria-label="Закрыть форму 'Обновления аватара'"
+        ></button>
+        <h3 class="popup__title">Обновить аватар</h3>
+        <form class="popup__form form" name="edit-avatar" novalidate>
+          <input
+            type="url"
+            name="avatar"
+            class="popup__input popup__input_type_avatar"
+            placeholder="Ссылка на фото"
+            id="popup__input_type_avatar"
+            required
+          />
+          <span class="form__input-error popup__input_type_avatar-error"></span>
+          <button type="submit" class="button popup__button">Сохранить</button>
+        </form>
+      </div>
+    </div>
 
     <template id="card-template">
       <li class="places__item card">
@@ -151,11 +170,14 @@
         ></button>
         <div class="card__description">
           <h2 class="card__title"></h2>
-          <button
-            type="button"
-            class="card__like-button"
-            aria-label="Лайкнуть карточку"
-          ></button>
+          <div class="card__like">
+            <button
+              type="button"
+              class="card__like-button"
+              aria-label="Лайкнуть карточку"
+            ></button>
+            <p class="card__like-amount"></p>
+          </div>
         </div>
       </li>
     </template>
